# libcasm-rt

./: .cirrus.yml  .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  COPYRIGHT.txt  Cargo.toml  LICENSE.txt  Makefile  README.md  README.org  libcasm-rt.h
.cmake/: Findlibcasm-rt.cmake  LibPackage.cmake  config.mk
.github/workflows/: build.yml  nightly.yml
c/: bool.h  casm-rt.h  int.h  update.h  updateset.h
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h
etc/test/builtin/: abort.cpp  assert.cpp  print.cpp  println.cpp
etc/test/builtin/as/boolean/: binary.cpp  bit.cpp  boolean.cpp  integer.cpp
etc/test/builtin/as/integer/: binary.cpp  bit.cpp  boolean.cpp  enumeration.cpp  integer.cpp
etc/test/builtin/as/string/: binary.cpp  bit.cpp  boolean.cpp  decimal.cpp  enumeration.cpp  floating.cpp  integer.cpp  rational.cpp  string.cpp
etc/test/builtin/at/: list.cpp  record.cpp  tuple.cpp
etc/test/builtin/size/: enumeration.cpp  list.cpp  range.cpp
etc/test/constant/: integer.cpp
etc/test/instruction/: and.cpp  equ.cpp  imp.cpp  not.cpp  or.cpp  xor.cpp
etc/test/instruction/add/: integer.cpp  string.cpp
etc/test/instruction/geq/: integer.cpp
etc/test/instruction/gth/: integer.cpp
etc/test/instruction/inv/: integer.cpp
etc/test/instruction/leq/: integer.cpp
etc/test/instruction/lth/: integer.cpp
etc/test/type/: integer.cpp
include/: updateset.h
llvm/: bool.ll  int.ll  rule.ll  str.ll  type.ll  update.ll  updateset.ll
src/: Backend.cpp  Backend.h  Builtin.cpp  Builtin.h  CMakeLists.txt  CasmRT.h  Constant.cpp  Constant.h  Instruction.cpp  Instruction.h  LLCodeBackend.cpp  LLCodeBackend.h  Type.cpp  Type.h  Update.cpp  Update.h  Utility.h  Value.cpp  Value.h  Version.in  Version.in.h  lib.rs  libcasm-rt.h
src/transform/: ConstantFoldingPass.cpp  ConstantFoldingPass.h
uts/: example.cpp  main.cpp  main.h
uts/builtin/: abort.cpp  as_boolean.cpp  assert.cpp  print.cpp  println.cpp
uts/builtin/as/: boolean.cpp
uts/builtin/as/boolean/: bit.cpp  boolean.cpp  integer.cpp
uts/builtin/as/integer/: bit.cpp  boolean.cpp  enumeration.cpp  integer.cpp
uts/builtin/as/string/: bit.cpp  boolean.cpp  enumeration.cpp  floating.cpp  integer.cpp  rational.cpp  string.cpp
uts/constant/: integer.cpp
uts/instruction/: and.cpp  equ.cpp  imp.cpp  not.cpp  or.cpp  xor.cpp
uts/instruction/add/: integer.cpp  string.cpp
uts/instruction/geq/: integer.cpp
uts/instruction/gth/: integer.cpp
uts/instruction/inv/: integer.cpp
uts/instruction/leq/: integer.cpp
uts/instruction/lth/: integer.cpp
uts/subject/: example.cpp
uts/type/: integer.cpp
uts/utc/: basic.cpp  bool.cpp  int.cpp  update.cpp  updateset.cpp
var/c/: bool.h  casm-rt.h  int.h  update.h  updateset.h
var/llvm/: bool.ll  int.ll  rule.ll  str.ll  type.ll  update.ll  updateset.ll
var/utc/: basic.cpp  bool.cpp  int.cpp  update.cpp  updateset.cpp
